Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.5.25, 10.6.18, 10.11.8
-
None
-
macOS Sonoma 14.4.1 (23E224) aarch64 (Apple Silicon)
Description
In 10.5, git commit sha cd0356a764d5cad5bb64479adb1a646283314f3c introduced this problem wherein we appear to wait forever in wait_for_signal_thread_to_end. This sha was cherry-pick'd from 10.6, git sha 814dc46748d8c276f18c7664d8d14a543cff954c which also fails in the same way.
Process thread sample from Activity Monitor (full sample attached):
1133 Thread_12113141 DispatchQueue_1: com.apple.main-thread (serial)
|
+ 1133 start (in dyld) + 2360 [0x1825b60e0]
|
+ 1133 main (in mariadbd) + 36 [0x1006c9d78] main.cc:25
|
+ 1133 mysqld_main(int, char**) (in mariadbd) + 3732 [0x1009f49bc] mysqld.cc:5766
|
+ 1133 close_connections() (in mariadbd) + 1996 [0x1009fafa4] mysqld.cc:1834
|
+ 1133 wait_for_signal_thread_to_end() (in mariadbd) + 192 [0x1009f0888] mysqld.cc:2101
|
+ 1121 my_sleep (in mariadbd) + 72 [0x1017eb14c] my_sleep.c:33
|
+ ! 543 time (in libsystem_c.dylib) + 80 [0x1827e0f24]
|
+ ! : 519 fesetenv (in libsystem_m.dylib) + 4,8,... [0x18f50137c,0x18f501380,...]
|
+ ! : 24 DYLD-STUB$$fesetenv (in libsystem_c.dylib) + 8,0 [0x18284c8f8,0x18284c8f0]
|
+ ! 389 time (in libsystem_c.dylib) + 52 [0x1827e0f08]
|
+ ! : 350 gettimeofday (in libsystem_c.dylib) + 56 [0x1827dbc9c]
|
+ ! : | 304 __commpage_gettimeofday_internal (in libsystem_kernel.dylib) + 44 [0x1829000d8]
|
+ ! : | + 304 mach_absolute_time (in libsystem_kernel.dylib) + 108,112 [0x1828fe6c0,0x1828fe6c4]
|
+ ! : | 46 __commpage_gettimeofday_internal (in libsystem_kernel.dylib) + 80,36,... [0x1829000fc,0x1829000d0,...]
|
+ ! : 29 gettimeofday (in libsystem_c.dylib) + 32,56 [0x1827dbc84,0x1827dbc9c]
|
+ ! : 10 __commpage_gettimeofday_internal (in libsystem_kernel.dylib) + 164 [0x182900150]
|
+ ! 172 time (in libsystem_c.dylib) + 40 [0x1827e0efc]
|
+ ! : 172 fegetenv (in libsystem_m.dylib) + 4,0 [0x18f501364,0x18f501360]
|
+ ! 17 time (in libsystem_c.dylib) + 28 [0x1827e0ef0]
|
+ 12 my_sleep (in mariadbd) + 96 [0x1017eb164] my_sleep.c:33
|
Attachments
Issue Links
- is duplicated by
-
MDEV-34254 10.11.8 hang on shutdown: "2024-05-27 9:00:12 0 [Warning] Signal handler thread did not exit in a timely manner. Continuing to wait for it to stop.."
-
- Closed
-
-
MDEV-34676 REOPEN: mariadb-install-db Error in my_thread_global_end(): 1 threads didn't exit
-
- Closed
-
- relates to
-
MDEV-34185 macOS Build & Test
-
- Open
-
Given
MDEV-34254the affected versions needs to be updated to include 10.11.8(and possibly all intermediary versions 10.7-10.10?)